--- a/website/resource/html/user.html
+++ b/website/resource/html/user.html
@@ -7,6 +7,21 @@
 </head>
 
 <body>
-  <h1>미개발</h1>
+  <form>
+    <label for="data">Enter your data:</label><br>
+    <textarea id="data" name="data" rows="4" cols="50"></textarea><br>
+    <input type="button" value="Save" onclick="saveData()">
+  </form>
+  <script>
+    function saveData() {
+      const userData = document.getElementById('data').value;
+      if (userData.trim() !== '') {
+        localStorage.setItem('user_', userData);
+        alert('Data saved successfully');
+      } else {
+        alert('Please enter data before saving.');
+      }
+    }
+  </script>
 </body>
 </html>
