--- a/website/resource/html/user.html
+++ b/website/resource/html/user.html
@@ -7,39 +7,39 @@
 </head>
 
 <body>
-  <input type="text" id="inputField">
-  <button onclick="addInput()">추가</button>
-  <button onclick="saveArray()">저장</button>
-
-  <ul id="inputList"></ul>
+  <h1>데이터 입력</h1>
+  <form id="data-form">
+    <label for="name">이름:</label>
+    <input type="text" id="name" name="name" required><br>
+    <label for="age">나이:</label>
+    <input type="number" id="age" name="age" required><br>
+    <button type="submit">저장</button>
+  </form>
 
   <script>
-      var userInputArray = [];
+    document.getElementById('data-form').addEventListener('submit', function(event) {
+      event.preventDefault();
+      
+      const name = document.getElementById('name').value;
+      const age = document.getElementById('age').value;
 
-      function addInput() {
-          var inputValue = document.getElementById("inputField").value;
-          if (inputValue !== "") {
-              userInputArray.push(inputValue);
-              document.getElementById("inputField").value = "";
-              displayArray();
-          }
-      }
+      const data = { name, age };
 
-      function displayArray() {
-          var inputList = document.getElementById("inputList");
-          inputList.innerHTML = "";
-          for (var i = 0; i < userInputArray.length; i++) {
-              var listItem = document.createElement("li");
-              listItem.textContent = userInputArray[i];
-              inputList.appendChild(listItem);
-          }
-      }
-
-      function saveArray() {
-          // 여기서 서버에 배열을 보내는 작업을 수행할 수 있습니다.
-          // AJAX 요청을 사용하여 서버로 데이터를 보낼 수 있습니다.
-          console.log("사용자 입력 배열을 서버에 저장합니다.", userInputArray);
-      }
+      fetch('/save-data', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+      })
+      .then(response => response.text())
+      .then(message => {
+        console.log(message);
+      })
+      .catch(error => {
+        console.error('오류 발생:', error);
+      });
+    });
   </script>
 </body>
 </html>
