--- a/webos_gpio_test/gpio.html
+++ b/webos_gpio_test/gpio.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html lang="kr">
+    <title>button start</button></title>
 <head>
-    
+    <body>
+        <li class="menuType">MAIN MENU</li>
+        <li class="menuLink" onclick="iframeSelect(1)">음성인식</li>
+        <li class="menuLink" onclick="iframeSelect(2)">기기동작</li>
+        <li class="menuLink" onclick="iframeSelect(3)">카메라 작동</li>
+        //추가 해야할 것이 머지;;
+    </body>
