유저 정보에 알러지 추가 가능

--- a/website/resource/html/user.html
+++ b/website/resource/html/user.html
@@ -7,12 +7,20 @@
 </head>
 
 <body>
-  <h1>데이터 입력</h1>
+  <h1>사용자 추가</h1>
   <form id="data-form">
     <label for="name">이름:</label>
     <input type="text" id="name" name="name" required><br>
-    <label for="age">나이:</label>
-    <input type="number" id="age" name="age" required><br>
+    <label for="allergy">알레르기 식품:</label>
+    <select id="allergy" name="allergy" required>
+      <option>---선택---</option>
+      <option value="none">없음</option>
+      <option value="egg">난류</option>
+      <option value="milk">우유</option>
+      <option value="buckwheat">메밀</option>
+      <option value="peanut">땅콩</option>
+      <option value="soybean">대두</option>
+    </select>
     <button type="submit">저장</button>
   </form>
 
@@ -21,9 +29,9 @@
       event.preventDefault();
       
       const name = document.getElementById('name').value;
-      const age = document.getElementById('age').value;
+      const allergy = document.getElementById('allergy').value;
 
-      const data = { name, age };
+      const data = { name, allergy };
 
       fetch('/save-data', {
         method: 'POST',
