--- a/website/resource/html/user.html
+++ b/website/resource/html/user.html
@@ -19,6 +19,20 @@
       <option value="buckwheat">메밀</option>
       <option value="peanut">땅콩</option>
       <option value="soybean">대두</option>
+      <option value="wheat">밀</option>
+      <option value="mackerel">고등어</option>
+      <option value="crab">게</option>
+      <option value="shrimp">새우</option>
+      <option value="pork">돼지고기</option>
+      <option value="peach">복숭아</option>
+      <option value="tomato">토마토</option>
+      <option value="sulphuric aicd">아황산류</option>
+      <option value="walnut">호두</option>
+      <option value="chicken">닭고기</option>
+      <option value="beef">쇠고기</option>
+      <option value="squid">오징어</option>
+      <option value="selfish">조개류(굴, 전복, 홍합 포함)</option>
+      <option value="pine nut">잣</option>
     </select>
     <button type="submit">저장</button>
   </form>
