저장된 데이터 표시 및 수정 기능 추가
ChatGPT 엉아의 힘을 빌렸는데 안되는게 있음 공부해서 수정 필요해 보임.

--- a/website/index.html
+++ b/website/index.html
@@ -31,7 +31,7 @@
       <li class="menuLink" id="menu3" onclick="iframeSelect(3)">알레르기</li>
       <li class="menuType">INFORMATION</li>
       <li class="menuLink" id="menu4" onclick="iframeSelect(4)">요리법</li>
-      <li class="menuLink" id="menu5" onclick="iframeSelect(5)">버튼 조작(GPIO)</li>
+      <li class="menuLink" id="menu5" onclick="iframeSelect(5)">버튼 조작</li>
     </nav>
   </section>
   <iframe id="iframe"></iframe>
