--- a/website/resource/html/user.html
+++ b/website/resource/html/user.html
@@ -77,7 +77,7 @@
         data.forEach(item => {
           const listItem = document.createElement('li');
           listItem.innerHTML = `
-            이름: ${item.name}, 알러지: ${item.allergy}
+            이름: ${item.name}, 알레르기: ${item.allergy}
             <button data-id="${item.id}" class="edit-button">수정</button>
           `;
           dataList.appendChild(listItem);
