배경 흰색으로 고정

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="resource/styles.css">
 </head>
 
-<body>
+<body style="background-color: white;">
   <header> <!--상단에 로고랑 음량설정 부분-->
     <div class="volumeBox" id="volume10" onclick="volumeControl(10)"></div>
     <div class="volumeBox" id="volume9" onclick="volumeControl(9)"></div>
