--- a/website/start_sofi.html
+++ b/website/start_sofi.html
@@ -17,7 +17,7 @@
     }
   </style>
 </head>
-<body>
+<body style="background-color: white;">
   <div>
     <img id="loading" src="resource\icons\sofi.png">
   </div>
