--- a/website/resource/html/dashboard.html
+++ b/website/resource/html/dashboard.html
@@ -8,21 +8,17 @@
 
 <body>
   <button onclick="quickServiceTest();"> quick service test </button>
+  <script>
+    var bridge = new WebOSServiceBridge();
+    function quickServiceTest(){
+      var url = 'luna://com.webos.notification/createToast';
+      var params = {
+        "message": "Hello, world!"
+      };
+
+      bridge.call(url, JSON.stringify(params));
+    }
+  </script>
 </body>
-<script>
-  function quickServiceTest(){
-  var bridge = new WebOSServiceBridge();
-  var url = 'luna://com.webos.service.applicationmanager/running';
 
-  bridge.onservicecallback = callback;
-
-  function callback(msg){
-      var response = JSON.parse(msg);
-      console.log(response.returnValue);
-  }
-
-  var params = '{}';
-  bridge.call(url, params);
-  }
-</script>
 </html>
