--- a/website/webos_gpio_test/gpio.html
+++ b/website/webos_gpio_test/gpio.html
@@ -8,9 +8,11 @@
 <body>
     <ul>
         <li class="menuType">MAIN MENU</li>
-        <li class="menuLink" onclick="iframeSelect(1)">음성인식</li>
+        <li class="menuLink" onclick="checkMic()">음성인식</li>
         <li class="menuLink" onclick="iframeSelect(2)">기기동작</li>
         <li class="menuLink"><a href="http://192.168.0.196">카메라 작동</a></li>
+        <li class="menuLink"><a href="https://theqoo.net/square/561464688">유튜브</li>
     </ul>
 </body>
+<script src="gpio.js"></script>
 </html>
