--- a/website/webos_gpio_test/gpio.html
+++ b/website/webos_gpio_test/gpio.html
@@ -11,7 +11,7 @@
         <li class="menuLink" onclick="checkMic()">음성인식</li>
         <li class="menuLink" onclick="iframeSelect(2)">기기동작</li>
         <li class="menuLink"><a href="http://192.168.0.196">카메라 작동</a></li>
-        <li class="menuLink"><a href="https://theqoo.net/square/561464688">유튜브</li>
+        <li class="menuLink"><a href="https://theqoo.net/square/561464688">사운드 체크</li>
     </ul>
 </body>
 <script src="gpio.js"></script>
