--- a/website/html/gpio.html
+++ b/website/html/gpio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WELCOME SOFI!</title>
-    <script src="gpio.js"></script>
+    <script src="../js/gpio.js"></script>
 </head>
 <body>
     <ul>
