--- a/website/start_sofi.html
+++ b/website/start_sofi.html
@@ -19,7 +19,7 @@
 </head>
 <body style="background-color: white;">
   <div>
-    <img id="loading" src="resource\icons\sofi.png">
+    <img id="loading" src="img\sofi.png">
   </div>
   <script>
     window.onload = function() {
