--- a/website/html/dashboard.html
+++ b/website/html/dashboard.html
@@ -4,7 +4,7 @@
 <title>Example Web App - DB</title>
 </head>
 
-<body>
+<body id="frame">
     <h1> WebOS DB Example </h1>
     <div class="input-section">
         <div> Device Name </div> <input id="text-input-name" type="text"> <div></div>
