--- a/website/html/user.html
+++ b/website/html/user.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>HOME</title>
   <link rel="stylesheet" href="../css/styles.css">
+  <script src="../js/user.js"></script>
 </head>
  
 <body id=frame>
@@ -41,69 +42,5 @@
  
   <h1>알레르기 삭제</h1>
   <ul id="dataList"></ul>
- 
-  <script>
-    //데이터를 서버로부터 받아와 화면에 출력
-    function fetchData() {
-      fetch('http://101.101.219.171:5556/getUser')
-      .then(response => response.json())
-      .then(data => {
-        const dataList = document.getElementById('dataList');
-        dataList.innerHTML = ''; // 기존 목록 초기화
- 
-        data.forEach(user => {
-          const listItem = document.createElement('li');
-          listItem.innerHTML = `
-            이름: ${user.name}, 알레르기: ${user.allergy}
-            <button onclick="deleteUser(${user.id})">삭제</button>`;
-          dataList.appendChild(listItem); //변수 각각의 값을 dataList에 추가
-        });
-      })
-      .catch(error => {
-        console.error('오류 발생:', error);
-      });
-    }
-
-    //서버 user.json에 입력한 값을 저장하는 기능
-    function save() {
-      const name = document.getElementById('name').value;
-      const allergy = document.getElementById('allergy').value;
-      const user = { name, allergy };
- 
-      fetch('http://101.101.219.171:5556/saveUser', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json' //json 형태의 파일을 다룸.
-        },
-        body: JSON.stringify(user)
-      })
-      .then(response => response.text()) //텍스트의 형태로
-      .then(message => {
-        console.log(message);
-      })
-      .catch(error => {
-        console.error('오류 발생:', error);
-      });
-    };
- 
-    function deleteUser(id) {
-      fetch(`http://101.101.219.171:5556/deleteUser`, {
-        method: 'DELETE',
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({id})
-      })
-      .then(response => response.text())
-      .then(message => {
-        console.log(message);
-        fetchData(); // 데이터 삭제 후 데이터 다시 불러오기
-      })
-      .catch(error => {
-        console.error('오류 발생:', error);
-      });
-    }
-    fetchData();
-  </script>
 </body>
 </html>
