--- a/website/html/gpio.html
+++ b/website/html/gpio.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>WELCOME SOFI!</title>
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/gpio.js"></script>
 </head>
 <body>
     <ul>
         <li class="menuType">MAIN MENU</li>
-        <button class="menuLink" onclick="aiVoiceStart()">음성인식</button>
-        <button class="menuLink" onclick="gpio_test()">gpio_test</button>
-        <li class="menuLink"><a href="http://192.168.0.196:81/stream">카메라 작동</a></li>
-        <li class="menuLink"><a href="https://theqoo.net/square/561464688">사운드 체크</li>
+        <button onclick="aiVoiceStart()">음성인식</button>
+        <button onclick="gpio_test()">gpio_test</button>
+        <li><a href="http://192.168.0.196:81/stream">카메라 작동</a></li>
+        <li><a href="https://theqoo.net/square/561464688">사운드 체크</li>
     </ul>
 </body>
 </html>
