--- a/website/html/dashboard.html
+++ b/website/html/dashboard.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Example Web App - DB</title>
+    <title>Example Web App - DB</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body id="frame">
@@ -14,7 +15,3 @@
     <div id="item-text-field"></div>
 </body>
 </html>
-
-<script>
-
-</script>
