음성인식 js 분할

--- a/website/index.html
+++ b/website/index.html
@@ -31,11 +31,13 @@
       <li class="menuLink" id="menu3" onclick="iframeSelect(3)">버튼 조작</li>
       <li class="menuType">INFORMATION</li>
       <li class="menuLink" id="menu4" onclick="iframeSelect(4)">요리법</li>
+      <li class="menuLink" id="menu5" onclick="iframeSelect(5); aiVoiceStart();">음성인식</li>
     </nav>
   </section>
   
   <iframe id="iframe"></iframe>
 
   <script src="js/script.js"></script>
+  <script src="js/voice.js"></script>
 </body>
 </html>
