--- a/website/index.html
+++ b/website/index.html
@@ -39,5 +39,13 @@
 
   <script src="js/script.js"></script>
   <script src="js/voice.js"></script>
+  <script>
+    window.onload = function() {
+      volumeControl(10); //초기 음량 설정
+      iframeSelect(1); //초기 페이지 접속
+      voiceStart();
+      voiceGetResponse();
+    };
+  </script>
 </body>
 </html>
