--- a/website/index.html
+++ b/website/index.html
@@ -38,6 +38,7 @@
   <iframe id="iframe"></iframe>
 
   <script src="js/script.js"></script>
+  <script src="js/gpio.js"></script>
   <script src="js/voice.js"></script>
   <script>
     window.onload = function() {
