--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,9 @@
 </head>
 
 <body style="background-color: white;">
+  <video id="video" width="640" height="480" autoplay style="display: none;" ></video>
+  <canvas id="canvas" width="640" height="480" style="display: none;"></canvas>
+  
   <header> <!--상단에 로고랑 음량설정 부분-->
     <div class="volumeBox" id="volume10" onclick="volumeControl(10)"></div>
     <div class="volumeBox" id="volume9" onclick="volumeControl(9)"></div>
