대규모 패치

--- a/website/html/picture.html
+++ b/website/html/picture.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Auto Capture and Upload</h1>
-    <video id="video" width="640" height="480" autoplay style="display: none;" ></video>
-    <canvas id="canvas" width="640" height="480" style="display: none;"></canvas>
+    <video id="video" width="612" height="612" autoplay></video>
+    <canvas id="canvas" width="612" height="612"></canvas>
     <button id="upload">Upload</button>
 
     <script>
