--- a/website/html/user.html
+++ b/website/html/user.html
@@ -39,7 +39,7 @@
     <pre><button type="submit" onclick="save()">저장</button></pre>
   </form>
  
-  <h1>알레르기 삭제</h1>
+  <h1>알레르기 정보</h1>
   <ul id="dataList"></ul>
 
   <script src="../js/user.js"></script>
