--- a/website/index.html
+++ b/website/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body style="background-color: white;">
-  <video id="video" width="640" height="480" autoplay style="display: none;" ></video>
-  <canvas id="canvas" width="640" height="480" style="display: none;"></canvas>
+  <video id="video" width="612" height="612" autoplay style="display: none;" ></video>
+  <canvas id="canvas" width="612" height="612" style="display: none;"></canvas>
   
   <header> <!--상단에 로고랑 음량설정 부분-->
     <div class="volumeBox" id="volume10" onclick="volumeControl(10)"></div>
@@ -31,10 +31,9 @@
       <li class="menuLink" id="menu1" onclick="iframeSelect(1)">대시보드</li>
       <li class="menuType">SETTING</li>
       <li class="menuLink" id="menu2" onclick="iframeSelect(2)">사용자</li>
-      <li class="menuLink" id="menu3" onclick="iframeSelect(3)">버튼 조작</li>
       <li class="menuType">INFORMATION</li>
-      <li class="menuLink" id="menu4" onclick="iframeSelect(4)">요리법</li>
-      <li class="menuLink" id="menu5" onclick="iframeSelect(5)">음성인식</li>
+      <li class="menuLink" id="menu3" onclick="iframeSelect(3)">요리법</li>
+      <li class="menuLink" id="menu4" onclick="iframeSelect(4)">사용법</li>
     </nav>
   </section>
   
