--- a/website/html/guide.html
+++ b/website/html/guide.html
@@ -1,2 +1,19 @@
-사용법
-대충 만들어 놓음 ㅇㅇ
+<!DOCTYPE html>
+<html lang="kr">
+<head>
+  <meta charset="UTF-8">
+  <title>HOME</title>
+  <link rel="stylesheet" href="../css/styles.css">
+</head>
+ 
+<body id=frame>
+  <h1 style="margin: -10px 0px">사용법</h1>
+  <p>
+    SOFI는 Sound of Food Information의 약자로 시각의 불편함을 가진 분들을 위한 제품입니다.
+    요리법을 제외한 모든 기능은 음성 명령어로 모두 실행 가능합니다.
+  </p>
+  
+
+  <script src="../js/user.js"></script>
+</body>
+</html>
