--- a/website/index.html
+++ b/website/index.html
@@ -18,25 +18,40 @@
       <li class="menuType">HOME</li>
       <li class="menuLink" id="menu1" onclick="iframeSelect(1)">대시보드</li>
       <li class="menuType">SETTING</li>
-      <li class="menuLink" id="menu2" onclick="iframeSelect(2)">사용자</li>
+      <li class="menuLink" id="menu2" onclick="iframeSelect(2)">알레르기</li>
       <li class="menuType">INFORMATION</li>
       <li class="menuLink" id="menu4" onclick="iframeSelect(4)">사용법</li>
       <li class="menuLink" id="menu3" onclick="iframeSelect(3)">요리법</li>
     </nav>
-    <img id="volumeImage" src="img/nonMute.png" onclick="volumeControl()">
+    <img id="volumeImage" src="img/mute.png" onclick="volumeControl()">
+    <img id="cameraImage" src="img/camera.png" onclick="showConfirm()">
   </section>
   
   <iframe id="iframe"></iframe>
 
-  <script src="js/script.js"></script>
-  <script src="js/gpio.js"></script>
-  <script src="js/voice.js"></script>
+  <div class="popupContainer" id="confirm">
+    <div class="popup">
+        <h2>스캔하시겠습니까?</h2>
+        <button onclick="confirmScan(false)">아니오</button>
+        <button onclick="confirmScan(true)">네</button>
+    </div>
+  </div>
+  <div class="popupContainer" id="scanning">
+    <div class="popup">
+      <h1 id="scanLoading">스캔 중</h1>
+      <p>잠시만 기다려 주십시오.</p>
+    </div>
+  </div>
+
   <script>
     window.onload = function() {
       iframeSelect(1); //초기 페이지 접속
-      voiceStart();
-      voiceGetResponse();
+      voiceStart(); //음성인식 실행
+      voiceGetResponse(); //음성인식 값 확인
+      volumeControl(); //볼륨 100시작
     };
   </script>
+  <script src="js/script.js"></script>
+  <script src="js/voice.js"></script>
 </body>
 </html>
