--- a/website/html/dashboard.html
+++ b/website/html/dashboard.html
@@ -6,12 +6,14 @@
 </head>
 
 <body id="frame">
-    <h1> WebOS DB Example </h1>
-    <div class="input-section">
-        <div> Device Name </div> <input id="text-input-name" type="text"> <div></div>
-        <div> Location </div> <input id="text-input-loc" type="text"> <div></div>
-        <button onclick="putDevice()"> add </button>
-    </div>
-    <div id="item-text-field"></div>
+    <h2 style="margin: -10px 0px -10px 0px">스캔 기록</h2>
+
+    <h2>알레르기 등록된 사용자</h2>
+    <ul id="dashboard_allergy"></ul>
+
+    <script src="../js/allergy.js"></script>
+    <script>
+        window.onload = fetchData_dashboard();
+    </script>
 </body>
 </html>
