--- a/website/html/guide.html
+++ b/website/html/guide.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-  <meta charset="UTF-8">
-  <title>HOME</title>
-  <link rel="stylesheet" href="../css/styles.css">
+    <meta charset="UTF-8">
+    <title>HOME</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
  
 <body id=frame>
-  <h1 style="margin: -10px 0px">사용법</h1>
-  <p>
-    SOFI는 Sound of Food Information의 약자로 시각의 불편함을 가진 분들을 위한 제품입니다.
-    요리법을 제외한 모든 기능은 음성 명령어로 모두 실행 가능합니다.
-  </p>
-  
-
-  <script src="../js/user.js"></script>
+    <h1 style="margin: -10px 0px">사용법</h1>
+    <p>
+        SOFI는 Sound of Food Information의 약자로 시각 기능의 불편함을 가진 분들을 돕고자 만들어졌습니다.
+        요리법을 제외한 모든 기능은 음성 명령어만으로 실행 가능합니다.<br><br>
+        대시보드 창에서는 지금까지 사용자가 스캔한 음식들을 확인할 수 있습니다.<br>
+        알레르기 창에서는 음식 알레르기를 가진 사용자의 정보를 등록/삭제할 수 있습니다.<br>
+        요리법 창은 '천개의 레시피' 사이트로 연결되며, 사용자가 자유롭게 원하는 음식 레시피를 검색할 수 있습니다.<br>
+        해당 사용법 창의 경우, 시각 기능이 정상이거나 완전히 소실되지 않은 분들을 위해 만들어졌습니다.
+        혹여나 구성원 중 사용법의 숙지가 어려운 분이 계신다면 
+        아래 음성 명령어 사용법에 대한 숙지를 도와주시면 감사하겠습니다.<br>
+        음성 명령어의 경우, "스노우보이"로 호출한 이후, 아래 음성 명령어의 사용이 가능합니다.<br>
+        <hr>
+        <h3>사용 가능한 음성 명령어</h3>
+        도움말 / 도움말 스캔 / 도움말 알레르기 / 도움말 음량<br>
+        알레르기 등록 / 알레르기 정보 / 알레르기 삭제<br>
+        스캔 해 줘 / 음량 설정 <br>
+    </p>
 </body>
 </html>
