--- a/website/html/dashboard.html
+++ b/website/html/dashboard.html
@@ -10,10 +10,14 @@
 
     <h2>알레르기 등록된 사용자</h2>
     <ul id="dashboard_allergy"></ul>
-
+    
+    <button id="gpio">gpio 테스트</button>
+    
+    <script src="../js/gpio.js"></script>
     <script src="../js/allergy.js"></script>
     <script>
         window.onload = fetchData_dashboard();
+        document.getElementById("gpio").addEventListener("click", gpio_main);
     </script>
 </body>
 </html>
