--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@
         <li class="menuLink" id="menu4" onclick="iframeSelect(4)">사용법</li>
         </nav>
         <img id="volumeImage" src="img/mute.png" onclick="volumeControl()">
-        <img id="cameraImage" src="img/camera.png" onclick="showConfirm()">
+        <img id="cameraImage" src="img/camera.png" onclick="gpio_main()">
     </section>
     
     <iframe id="iframe"></iframe>
@@ -53,5 +53,6 @@
     </script>
     <script src="js/script.js"></script>
     <script src="js/voice.js"></script>
+    <script src="js/gpio.js"></script>
 </body>
 </html>
